# bootmedian

./: README.md  bootmedian.py  pyproject.toml  setup.py  upload_to_pypi.sh
Bootmedian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bootmedian/: __init__.py  bootmedian.py  main.py
examples/: simple_example.py
